fix login visible

--- a/src/assets/styles/containers/Login.scss
+++ b/src/assets/styles/containers/Login.scss
@@ -133,7 +133,7 @@
   width: 100%;
 }
 
-.input {
+.input-user{
   background-color: transparent;
   border-bottom: 2px solid white;
   border-left: 0px;
@@ -146,6 +146,23 @@
   margin-bottom: 20px;
   outline: none;
   padding: 0px 20px;
+  width: 70%;
+}
+
+.input-password{
+  background-color: transparent;
+  border-bottom: 2px solid white;
+  border-left: 0px;
+  border-right: 0px;
+  border-top: 0px;
+  color: white;
+  font-family: 'Muli', sans-serif;
+  font-size: 16px;
+  height: 50px;
+  margin-bottom: 20px;
+  outline: none;
+  width: 70%;
+
 }
 
 ::placeholder {
